force-app/main/default/objects/JBCXM__C360Sections__c/JBCXM__C360Sections__c.object-meta.xml
<CustomObject>
    <label>C360 Sections</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C360 Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>