force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__AccountReference__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AccountReference__c</fullName>
    <label>Account Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>