force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__ActualObjectId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActualObjectId__c</fullName>
    <label>Actual ObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>