force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__CustomConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomConfig__c</fullName>
    <label>CustomConfig</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>