force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__DisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayLabel__c</fullName>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>