force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__FieldId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FieldId__c</fullName>
    <label>Field Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>