force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__GSLayout__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GS Layout</label>
    <referenceTo>JBCXM__GSLayout__c</referenceTo>
    <relationshipLabel>C360 Sections</relationshipLabel>
    <relationshipName>C360Sections</relationshipName>
    <type>Lookup</type>
</CustomField>