force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__InAccountWidget__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InAccountWidget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InAccountWidget</label>
    <type>Checkbox</type>
</CustomField>