force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__InCustomer360__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InCustomer360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InCustomer360</label>
    <type>Checkbox</type>
</CustomField>