force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__InMobile__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InMobile</label>
    <type>Checkbox</type>
</CustomField>