force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__InSCWidget__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InSCWidget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Service cloud widget</description>
    <label>In Service Cloud Widget</label>
    <type>Checkbox</type>
</CustomField>