force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__isStandardObject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__isStandardObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Standard Object</label>
    <type>Checkbox</type>
</CustomField>