force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ObjectId__c</fullName>
    <description>It stores Salesforce sObject Id.</description>
    <label>Object Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>