force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>