force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__PageName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PageName__c</fullName>
    <label>PageName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>