force-app/main/default/objects/JBCXM__C360Sections__c/fields/JBCXM__ReportItems__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportItems__c</fullName>
    <label>ReportItems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>